--- a/demo/src/main/res/layout/activity_demo_tab_on_screen_limit.xml
+++ b/demo/src/main/res/layout/activity_demo_tab_on_screen_limit.xml
@@ -9,7 +9,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
                 app:rtl_tabOnScreenLimit="3"/>
     </LinearLayout>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
